# VertiBench

./: .gitignore  HyperParameters.md  README.md  Satellite.md  comm-acc.ipynb  comm-acc_real_dist.ipynb  comm-cost copy.ipynb  comm-cost-real-dist-2party.ipynb  comm-cost-real-dist-proc.py  comm-cost-real-dist.ipynb  comm-cost.ipynb  communication.sh  correlation.ipynb  env.txt  exp-all.py  feature-importance.ipynb  playground.ipynb  playground.py  plot-cifar10.ipynb  plot-dist-image.ipynb  plot-image.ipynb  pyproject.toml  real-data.ipynb  requirements.txt  scale_test.ipynb  setup.py  split-time.ipynb  unsupervised-learning.ipynb
example/: EvaluatorExample.py  SplitEvaluateExample.py
ntl-11.5.1/src/: BasicThreadPool.lo  FFT.lo  FacVec.lo  GF2.lo  GF2E.lo  GF2EX.lo  GF2EXFactoring.lo  GF2X.lo  GF2X1.lo  GF2XFactoring.lo  GF2XVec.lo  G_LLL_FP.lo  G_LLL_QP.lo  G_LLL_RR.lo  G_LLL_XD.lo  GetPID.lo  GetTime.lo  HNF.lo  LLL.lo  LLL_FP.lo  LLL_QP.lo  LLL_RR.lo  LLL_XD.lo  MakeDesc  MatPrime.lo  RR.lo  TestGetPID  TestGetTime  WordVector.lo  ZZ.lo  ZZTest  ZZVec.lo  ZZX.lo  ZZX1.lo  ZZXCharPoly.lo  ZZXFactoring.lo  ZZ_p.lo  ZZ_pE.lo  ZZ_pEX.lo  ZZ_pEXFactoring.lo  (+42 more)
out_comm1/: begin.txt  end.txt  log.txt  time.txt
out_comm2/: begin.txt  end.txt  log.txt  time.txt
results_real_dist_fedtree_2023-08-28_23-47-12/: proc.py
results_real_dist_fedtree_2023-08-28_23-47-12/CovType_client4_lr0.01_seed0_local1_global50_bs512_round1/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_fedtree_2023-08-28_23-47-12/Gisette_client4_lr0.01_seed0_local1_global50_bs512_round1/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_fedtree_2023-08-28_23-47-12/Gisette_client4_lr0.01_seed0_local1_global50_bs512_round2/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_fedtree_2023-08-28_23-47-12/MSD_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_fedtree_2023-08-28_23-47-12/Radar_client4_lr0.01_seed0_local1_global50_bs512_round1/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/: proc.py
results_real_dist_splitnn_2023-08-28_23-47-12/CovType_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/Epsilon_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/Gisette_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/Letter_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/MSD_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/Radar_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
results_real_dist_splitnn_2023-08-28_23-47-12/Realsim_client4_lr0.01_seed0_local1_global50_bs512/: begin0.txt  begin1.txt  begin2.txt  begin3.txt  end0.txt  end1.txt  end2.txt  end3.txt
satellite/: clean_satellite.py
src/: main.py  vertical_split.py
src/algorithm/: DistFedTree.py  DistSplitNN.py  FedTree.py  SplitNN.py
src/analysis/: alpha_importance.py  corr_scalability.py  pcor.py  peason_vs_spearman.py  resplit_vehicle.py  shapley_cmi.py  svd_dt.py  test_beta.py
src/dataset/: CIFAR10Dataset.py  FMRIDataset.py  GlobalDataset.py  LocalDataset.py  MNISTDataset.py  MyRealDataset.py  SatelliteDataset.py  VFLDataset.py  VehicleDataset.py  WideDataset.py  __init__.py
src/preprocess/: FeatureEvaluator.py  FeatureSplitter.py  clean_covtype.py  clean_letter.py  clean_msd.py  (+19 more)
test/: test_evaluate_alpha.py  test_evaluator.py  test_splitter.py
(+279 files in other folders)
